src/main/resources/META-INF/resources/rbs/css/rbs.css
/* ... */
.loading-indicator-container .loading-indicator-backdrop {
    background-color: rgba(0, 0, 0, 0.1);
    z-index: 1000;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.loading-indicator-container .loading-indicator {
    position: absolute;
    z-index: 1001;
    top: 35%;
    left: 50%;
    margin-left: -50px;
    width: 100px;
    text-align: center;
}

/*
 Anything that comes before a glyphicon should have some space to the right of it
*/
.fa + * {
    margin-left: 0.4em;
}

* + .fa {
    margin-left: 0.4em;
}

.navbar-text {
    padding-left: 1em;
}

button.navbar-toggle {
    padding: 0.3em 0.8em;
}

/**
Modals display always. We use transition groups to manage whether they're visible,
so they're removed from the DOM when they're not
*/
.modal {
    display: block !important;
    overflow-y: inherit !important;
}

.modal-open {
    position: fixed;
}

.modal .modal-dialog .modal-title {
    overflow-x: hidden;
    -ms-text-overflow: ellipsis;
    text-overflow: ellipsis;
}

.Modal-backdrop {
    background-color: rgba(0, 0, 0, 0.3);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1040;
}

/* dropdown menus display always, using transition groups to manage whether they're visible */
.dropdown-menu {
    display: block !important;
}

/*table stuff*/
.sortable-column-header {
    cursor: pointer;
    white-space: nowrap;
}

/* these tables are responsive for smaller devices */
@media (max-width: 768px) {
    table.table-responsive-horizontal {
        table-layout: fixed;
    }

    /* draw borders around each row */
    table.table-responsive-horizontal > tbody > tr {
        border: 0.1em solid gray;
    }

    /* each of the cells has its own row in this layout */
    table.table-responsive-horizontal > tbody > tr > td {
        display: block;
    }

    /* hide the table header */
    table.table-responsive-horizontal > thead {
        display: none;
    }

    /* if there is a title on the row, then limit its width */
    table.table-responsive-horizontal > tbody > tr > td[data-title] > * {
        display: inline-block;
        width: 80%;
        vertical-align: middle;
    }

    /* special display attributes for spans */
    table.table-responsive-horizontal > tbody > tr > td > span {
        display: inline-block;
        overflow-x: hidden;
        -ms-text-overflow: ellipsis;
        text-overflow: ellipsis;
        vertical-align: middle;
    }

    /* show the title */
    table.table-responsive-horizontal > tbody > tr > td[data-title]::before {
        content: attr(data-title);
        display: inline-block;
        text-align: right;
        padding-right: 0.5em;
        width: 20%;
        vertical-align: middle;
        font-weight: bolder;
        overflow-x: hidden;
        -ms-text-overflow: ellipsis;
        text-overflow: ellipsis;
    }
}

/* Tooltips */
.tip-container {
    position: relative;
    /* tips should overlap the navbar */
    z-index: 1;
    cursor: pointer;
}

/* the arrow */
.tip-container:before {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    display: block;
    opacity: 0;
    border: 0.25em solid transparent;
    visibility: hidden;
    -webkit-transition: opacity 250ms, visibility 250ms;
    -moz-transition: opacity 250ms, visibility 250ms;
    -ms-transition: opacity 250ms, visibility 250ms;
    -o-transition: opacity 250ms, visibility 250ms;
    transition: opacity 250ms, visibility 250ms;
}

.tip-container.tip-container-open:before {
    opacity: 1;
    visibility: visible;
}

.tip-container.tip-top:before {
    left: 50%;
    margin-left: -0.25em;
    border-top-color: rgba(33, 37, 41, 0.9);
    bottom: 100%;
}

.tip-container.tip-right:before {
    left: 100%;
    top: 50%;
    margin-top: -0.25em;
    border-right-color: rgba(33, 37, 41, 0.9);
}

.tip-container.tip-bottom:before {
    top: 100%;
    left: 50%;
    margin-left: -0.25em;
    border-bottom-color: rgba(33, 37, 41, 0.9);
}

.tip-container.tip-left:before {
    right: 100%;
    top: 50%;
    margin-top: -0.25em;
    border-left-color: rgba(33, 37, 41, 0.9);
}

/* the actual tip */
.tip-container .tip {
    min-width: 10em;
    text-align: center;
    position: absolute;
    background-color: rgba(33, 37, 41, 0.9);
    color: white;
    padding: 0.4em;
    border-radius: 0.2em;
    display: block;
    opacity: 0;
    visibility: hidden;
    -webkit-transition: opacity 250ms, visibility 250ms;
    -moz-transition: opacity 250ms, visibility 250ms;
    -ms-transition: opacity 250ms, visibility 250ms;
    -o-transition: opacity 250ms, visibility 250ms;
    transition: opacity 250ms, visibility 250ms;
}

.tip-container.tip-container-open .tip {
    opacity: 1;
    visibility: visible;
}

.tip-container.tip-top .tip {
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -o-transform: translateX(-50%);
    transform: translateX(-50%);
    left: 50%;
    bottom: -webkit-calc(100% + 0.4em);
    bottom: -moz-calc(100% + 0.4em);
    bottom: calc(100% + 0.4em);
}

.tip-container.tip-right .tip {
    left: -webkit-calc(100% + 0.4em);
    left: -moz-calc(100% + 0.4em);
    left: calc(100% + 0.4em);
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}

.tip-container.tip-bottom .tip {
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -o-transform: translateX(-50%);
    transform: translateX(-50%);
    left: 50%;
    top: -webkit-calc(100% + 0.4em);
    top: -moz-calc(100% + 0.4em);
    top: calc(100% + 0.4em);
}
/* ... */

